monopyly/static/css/style.css
/* ... */
#credit-statements-container .card-column .digits {
  color: #888888;
}

#credit-statements .statement-block {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 275px;
  margin: 15px;
  padding: 45px 50px;
}

#credit-statements .statement-block .date,
#credit-statements .statement-block .payment {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#credit-statements .statement-block .date .month {
  font-size: 22pt;
  letter-spacing: -1px;
}

#credit-statements .statement-block .date .year {
  font-size: 16pt;
  letter-spacing: 1px;
}

#credit-statements .statement-block .payment .balance {
  font-size: 30pt;
  font-weight: bold;
}

#credit-statements .statement-block .payment .paid-notice {
  font-size: 10pt;
}


/*
 * Customization for the (credit) 'Statement Details' page
 */
#credit-statement-details #statement-summary #payment {
  width: 100%;
  font-size: 12pt;
}

#credit-statement-details #statement-summary #due {
  float: left;
  display: flex;
  width: 175px;
}

#credit-statement-details #statement-summary #due-date {
  margin-top: -0.5px;
  margin-left: 5px;
  font-weight: bold;
}

#credit-statement-details #statement-summary #paid {
  float: right;
}

form#pay {
  clear: left;
  position: relative;
  width: 300px;
  margin: 50px auto 0px;
  border-radius: 5px;
  box-sizing: border-box;
}

form#pay button {
  height: 100%;
}

form#pay input:focus-visible {
  outline-offset: -2.5px;
}

form#pay button,
form#pay input {
  margin: 0;
  border: none;
  border-radius: inherit;
}

form#pay .form-inputs {
  border: 1px solid #cccccc;
  border-radius: inherit;
}

form#pay select optgroup {
  font-size: 10pt;
}

form#pay .form-line {
  position: relative;
  width: 80%;
  border-radius: inherit;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  box-sizing: border-box;
}

form#pay .form-line input,
form#pay .form-line select {
  border: none;
}

form#pay .form-line .dollar-sign {
  position: absolute;
  left: 10px;
  display: flex;
  align-items: center;
  height: 100%;
  color: #666666;
}

form#pay .form-line #pay-amount,
form#pay .form-line #pay-date {
  width: 50%;
  border-bottom: 2px solid #eeeeee;
}

form#pay .form-line #pay-amount {
  padding-left: 25px;
  padding-right: 15px;
  border-right: 2px solid #eeeeee;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
  text-align: right;
}

form#pay .form-line #pay-date {
  text-align: center;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}


form#pay #make-payment {
  position: absolute;
  top: 0;
  left: 0;
  background-color: green;
  background-image: linear-gradient(90deg, #85bb65, #73a457);
  color: white;
  transition: 0.1s;
}

form#pay #make-payment:hover {
  filter: brightness(1.08);
}

form#pay #make-payment[type="button"] .icon {
  display: none;
}

/* Format the button after it reveals parameters */
form#pay #make-payment[type="submit"] {
  left: 80%;
  width: 20%;
  padding: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

form#pay #make-payment[type="submit"] #prompt {
  display: none;
}

#statement-statistics {
  margin: 50px 0;
}

#statement-statistics table th,
#statement-statistics table td {
  padding: 3px 15px;
  text-align: right;
}


/*
 * Customization for the 'Credit Transactions' page
 */
#transactions-container .transactions {
  width: 100%;
  margin: 0 auto;
}


/*
 * Customization for the 'New Credit Transaction'/
 * 'Update Credit Transaction' pages
 */
form#credit-transaction {
  min-width: 250px;
}

form#credit-transaction #bank-field {
  flex: 3;
}

form#credit-transaction #last-four-digits-field {
  flex: 1;
  min-width: 150px;
}

form#credit-transaction #transaction-date-field {
  flex: 1;
  min-width: 150px;
}

form#credit-transaction #vendor-field {
  flex: 2;
}

form#credit-transaction .subtransaction-form {
  margin-top: 20px;
  border-top: 1px solid #eaeaea;
}

form#credit-transaction .subtotal-field {
  flex: 1;
}

form#credit-transaction .note-field {
  flex: 3;
}

form#credit-transaction #new-subtransaction.button {
  width: 150px;
  margin: 15px 0 20px;
  padding: 3px;
  border-radius: 15px;
  background-color: #444444;
  color: #eeeeee;
  font-size: 9pt;
  text-align: center;
}


/*
 * Customization for the transaction submission page
 */
#receipt {
  width: 31%;
  margin: auto;
}

#receipt-title {
  text-align: center;
}


/*
 * Customization for the 'Transaction Tags' page
 */
#transaction-tags ul {
  display: flex;
  flex-direction: column;
  list-style-type: none;
  margin: 5px 0;
  padding-left: 10px;
}

#transaction-tags .buttons {
  display: flex;
}

#transaction-tags .button {
  height: 20px;
  width: 20px;
  background-size: 20px 20px;
}

#transaction-tags .buttons .button {
  margin: 0 3px;
}

#transaction-tags input.new-tag {
  display: none;
  width: 200px;
  margin: 5px 0;
  padding: 2px 15px;
  border: 0 solid #85bb65;
  border-radius: 20px;
  text-align: center;
  outline: none;
  caret-color: #cccccc;
  transition: border 0.1s ease;
}

#transaction-tags input.new-tag.visible {
  border: 1.5px solid #85bb65;
}

#transaction-tags .tag {
  z-index: 99;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25px;
  width: min-content;
  min-width: 200px;
  margin: 5px 0;
  padding: 2px 15px;
  box-sizing: border-box;
  border-radius: 20px;
  background-color: #dddddd;
}

#transaction-tags .root.new-tag.button {
  margin: 5px 0 0 10px;
}

#transaction-tags .tag-area {
  display: flex;
  align-items: center;
  width: min-content;
}

#transaction-tags .tag-area .buttons {
  margin-left: -60px;
  transition: margin-left 0.2s ease 0.1s;
}

#transaction-tags .tag-area:hover .buttons {
  margin-left: 5px;
  transition-delay: 0.3s;
}

#transaction-tags .buttons .action.delete {
  /* Set background image to allow color change on hover */
  background-image: url('../img/icons/delete-thick.png');
}
/* ... */

